Added AbstractIdValidator
Signed-off-by: David Joos <david.joos@bosch-si.com>